# GuGuColorCard

./: CMakeLists.txt  Info.plist  LICENSE  README.md  gugu.icns  main.cpp  main.qml
content/: CMakeLists.txt  ImageAnalyse.qml  ImportImage.qml
content/gugumainwindow/: CMakeLists.txt  Mainwindow.qml
content/src/: CMakeLists.txt  imageanalyse.cpp  imageanalyse.h
